Fixed bug where programs-page is overflowing vertically

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -656,9 +656,11 @@ li.nav-item.active .sidebar-image,
 
 /*Programs page*/
 .programs-page-pane {
-    border-right : 1px solid var(--gray);
-    width        : 33.33%;
-    min-width    : 320px;
+    border-right   : 1px solid var(--gray);
+    width          : 33.33%;
+    min-width      : 320px;
+    display        : flex;
+    flex-direction : column;
 }
 
 #term-select {
